# OpenGL

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/shaders/: materials.fs  materials.vs
dependencies/cgltf/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h
dependencies/stb/: CMakeLists.txt
idea/: bloom_implementation_guide.txt
src/: main.cpp  mesh.h  model.h
src/core/: engine.h  renderer.h
src/core/shader/: shader.h
src/core/util/: camera.h  window.h
